--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "!pip3 install llama-index llama-parse llama-index-embeddings-huggingface accelerate dspy-ai openpyxl langchain chromadb\n",
     "!pip3 install flash-attn --no-build-isolation\n",
-    "!pip3 install sentencepiece protobuf evaluate\n",
+    "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py\n",
     "!cp /workspace/repos/agentic-ai/MASTER\\ -\\ PYTHON\\ -\\ SCORING\\ MODEL\\ -\\ MCG\\ MADISON\\ RIDGE\\ DST\\ -\\ v2.0.xlsx /workspace/data"
    ]
   },
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip3 install rouge_score absl-py"
+    "!pip3 install tensorboardX bitsandbytes peft accelerate"
    ]
   },
   {
@@ -36,6 +36,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from transformers import BitsAndBytesConfig\n",
     "\n",
     "import dspy\n",
     "from dspy.evaluate import Evaluate\n",
@@ -46,12 +47,13 @@
     "# from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "# from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings\n",
     "# from llama_index.core.embeddings import resolve_embed_model\n",
-    "# import chromadb\n",
-    "# from chromadb.utils import embedding_functions\n",
-    "# from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
-    "# from llama_index.readers.file import PandasExcelReader\n",
-    "# CHROMA_COLLECTION_NAME = \"blockchain_and_ai\"\n",
-    "# CHROMADB_DIR = \"/workspace/data/db/\"\n",
+    "\n",
+    "import chromadb\n",
+    "from chromadb.utils import embedding_functions\n",
+    "from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
+    "from llama_index.readers.file import PandasExcelReader\n",
+    "CHROMA_COLLECTION_NAME = \"blockchain_and_ai\"\n",
+    "CHROMADB_DIR = \"/workspace/data/db/\"\n",
     "\n",
     "from typing import List, Any, Callable, Optional\n",
     "from pydantic import BaseModel\n",
@@ -73,37 +75,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_name = \"EleutherAI/gpt-neo-125m\"\n",
-    "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\"\n",
-    "# model_name = \"microsoft/Phi-3-mini-128k-instruct\" # 128K context window\n",
-    "# model_name = \"meta-llama/Meta-Llama-3-8B-Instruct\" # 8K context window\n",
-    "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\" # 8K context window\n",
-    "print('first model load...')\n",
-    "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
-    "access_token = os.getenv('HF_TOKEN')\n",
-    "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
-    "llm = dspy.HFModel(model=model_name, hf_device_map='auto', token=access_token)\n",
-    "llm.kwargs['max_new_tokens']=100\n",
-    "llm.kwargs['repetition_penalty']=1.1\n",
-    "llm.kwargs['do_sample']=False\n",
-    "# llm.kwargs['typical_p']=0.9\n",
-    "# llm.kwargs['temperature']=0.9\n",
-    "# llm.tokenizer.return_full_text = False\n",
-    "\n",
-    "\n",
-    "print('deleting model...')\n",
-    "llm.model=None\n",
-    "gc.collect()\n",
-    "print('reloading model...')\n",
-    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, \n",
-    "                                               trust_remote_code=True, device_map=\"auto\", \n",
-    "                                               attn_implementation=\"flash_attention_2\",  \n",
-    "                                               torch_dtype=torch.float16)\n",
-    "\n",
-    "# llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
-    "# llm.tokenizer.pad_token_id = llm.tokenizer.eos_token_id\n",
-    "\n",
-    "dspy.settings.configure(lm=llm)"
+    "def print_trainable_parameters(model):\n",
+    "    \"\"\"\n",
+    "    Prints the number of trainable parameters in the model.\n",
+    "    \"\"\"\n",
+    "    trainable_params = 0\n",
+    "    all_param = 0\n",
+    "    for _, param in model.named_parameters():\n",
+    "        all_param += param.numel()\n",
+    "        if param.requires_grad:\n",
+    "            trainable_params += param.numel()\n",
+    "    print(\n",
+    "        f\"trainable params: {trainable_params} || all params: {all_param} || trainable%: {100 * trainable_params / all_param}\"\n",
+    "    )\n"
    ]
   },
   {
@@ -140,14 +124,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_collect = {}\n",
-    "for row,col in ground_truth.iterrows():\n",
-    "    # if isinstance(col.values[0], int):\n",
-    "    #     name = f\"Cash Flows {col.values[0]}\"\n",
-    "    # else:\n",
-    "    name = col.values[0]\n",
-    "    value = col.values[1]\n",
-    "    gt_collect[name] = str(value)"
+    "access_token = os.getenv('HF_TOKEN')\n",
+    "print('first model load...')\n",
+    "# model_name = \"EleutherAI/gpt-neo-125m\"\n",
+    "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\"\n",
+    "# model_name = \"microsoft/Phi-3-mini-128k-instruct\" # 128K context window\n",
+    "# model_name = \"meta-llama/Meta-Llama-3-8B-Instruct\" # 8K context window\n",
+    "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\" # 8K context window\n",
+    "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
+    "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
+    "llm = dspy.HFModel(model=model_name, hf_device_map='auto', token=access_token)\n",
+    "llm.kwargs['max_new_tokens']=100\n",
+    "llm.kwargs['repetition_penalty']=1.1\n",
+    "llm.kwargs['temperature']=None\n",
+    "llm.kwargs['do_sample']=False\n",
+    "llm.kwargs['top_k']=None\n",
+    "# llm.kwargs['typical_p']=0.9\n",
+    "\n",
+    "print('deleting model...')\n",
+    "llm.model=None\n",
+    "gc.collect()\n",
+    "print('reloading model...')\n",
+    "quantization_config = BitsAndBytesConfig(\n",
+    "        load_in_4bit=True,\n",
+    "        bnb_4bit_quant_type=\"nf4\",\n",
+    "        bnb_4bit_compute_dtype=torch.float16,\n",
+    ")\n",
+    "\n",
+    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=quantization_config, \n",
+    "                                               trust_remote_code=True, device_map=\"auto\", \n",
+    "                                               attn_implementation=\"flash_attention_2\",  \n",
+    "                                               torch_dtype=torch.bfloat16)\n",
+    "\n",
+    "\n",
+    "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+    "\n",
+    "config = LoraConfig(\n",
+    "    r=16,\n",
+    "    lora_alpha=32,\n",
+    "    target_modules=[\"k_proj\", \"v_proj\", \"q_proj\", \"o_proj\"], # Mistral param names\n",
+    "    lora_dropout=0.05,\n",
+    "    bias=\"none\", #\"none\", \"all\", \"lora_only\"\n",
+    "    task_type=\"CAUSAL_LM\", \n",
+    "    \n",
+    ")\n",
+    "\n",
+    "llm.model = prepare_model_for_kbit_training(llm.model)\n",
+    "llm.model = get_peft_model(llm.model, config)\n",
+    "print_trainable_parameters(llm.model)\n",
+    "\n",
+    "if model_name == 'mistralai/Mistral-7B-Instruct-v0.3':\n",
+    "    llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
+    "    llm.tokenizer.pad_token_id = llm.tokenizer.eos_token_id\n",
+    "\n",
+    "\n",
+    "# dspy.settings.configure(lm=llm)\n",
+    "\n",
+    "######## RAG model\n",
+    "chroma_client = chromadb.PersistentClient(path=CHROMADB_DIR)\n",
+    "collection = chroma_client.get_or_create_collection(name=CHROMA_COLLECTION_NAME)\n",
+    "text_splitter = SentenceTransformersTokenTextSplitter(tokens_per_chunk=100)\n",
+    "\n",
+    "ids = []\n",
+    "documents = []\n",
+    "metadatas = []\n",
+    "dfs_str = get_csv_string(dfs)\n",
+    "chunks = text_splitter.create_documents([dfs_str], )\n",
+    "for chunk_no, chunk in enumerate(chunks):\n",
+    "    ids.append(f\"{chunk_no}\")\n",
+    "    documents.append(chunk.page_content)\n",
+    "    # metadatas.append({\"title\":})\n",
+    "if ids:\n",
+    "    collection.upsert(ids=ids, documents=documents)#, metadatas=metadatas)\n",
+    "\n",
+    "# default_ef = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')\n",
+    "default_ef = embedding_functions.DefaultEmbeddingFunction()\n",
+    "retriever = ChromadbRM(CHROMA_COLLECTION_NAME, CHROMADB_DIR, default_ef, k=3)\n",
+    "\n",
+    "dspy.settings.configure(lm=llm, rm=retriever)"
    ]
   },
   {
@@ -164,13 +218,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json\n",
     "from models import SpreadSheetAnalyzer\n",
-    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict)"
+    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=1)"
    ]
   },
   {
@@ -195,35 +256,6 @@
     "    # print(range_description_json[value_to_extract])\n",
     "    # print(parsed_name, parsed_values)\n",
     "    # print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acc = []\n",
-    "for vname, vvalue in collection:\n",
-    "    if vname in gt_collect:\n",
-    "        acc.append(vvalue == gt_collect[vname])\n",
-    "    else:\n",
-    "        acc.append(False)\n",
-    "np.mean(acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# baseline = 0.35294117647058826\n",
-    "# 0.29411764705882354\n",
-    "# 0.23529411764705882\n",
-    "# 0.17647058823529413\n",
-    "# 0.17647058823529413\n",
-    "# 0.23529411764705882"
    ]
   },
   {
@@ -294,23 +326,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs_aug = randomize_row_values(dfs, ground_truth=ground_truth, n_samples=15)\n",
-    "dfs_str = get_csv_string(dfs_aug)\n",
     "# dfs_str = get_csv_string(dfs)\n",
     "num_rounds = 10\n",
     "train_data = []\n",
     "for _ in range(num_rounds):\n",
-    "    dfs_aug = randomize_row_values(dfs, ground_truth=ground_truth, n_samples=15)\n",
-    "    dfs_str = get_csv_string(dfs_aug)\n",
+    "    # TODO: gradually increase n_samples, random fill in of values in range\n",
+    "    # dfs_aug = randomize_row_values(dfs, ground_truth=ground_truth, n_samples=15)\n",
+    "    # dfs_str = get_csv_string(dfs_aug)\n",
+    "    # dfs_str = get_csv_string(dfs)\n",
     "    \n",
     "    for value_to_extract in gt_collect:\n",
     "\n",
-    "        question = f\"Get the value for: {value_to_extract}.\"\n",
+    "        # question = f\"Get the value for: {value_to_extract}.\"\n",
+    "        question = f\"What is the value for the variable name: {value_to_extract}?\"\n",
     "        answer = f\"{value_to_extract}: {gt_collect[value_to_extract]}\"\n",
-    "        train_data.append(dspy.Example(question=question, data=dfs_str, answer=answer).with_inputs('question', 'data'))\n",
-    "\n",
-    "    \n",
-    "\n"
+    "        # train_data.append(dspy.Example(question=question, data=dfs_str, answer=answer).with_inputs('question', 'data'))\n",
+    "        train_data.append(dspy.Example(question=question, answer=answer).with_inputs('question'))"
    ]
   },
   {
@@ -324,16 +355,7 @@
     "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json\n",
     "from models import SpreadSheetAnalyzer\n",
-    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(finetune_optimizer.teleprompter)"
+    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=1)"
    ]
   },
   {
@@ -348,17 +370,18 @@
     "metric = dspy.evaluate.metrics.answer_exact_match\n",
     "\n",
     "#Configure model to finetune\n",
-    "config = dict(target=model_name, epochs=2, bf16=True, bsize=32, accumsteps=1, lr=5e-5) #path_prefix=None\n",
+    "config = dict(target=model_name, epochs=2, bf16=True, bsize=1, accumsteps=3, lr=5e-5) #path_prefix=None\n",
     "\n",
     "#Compile program on BootstrapFinetune\n",
-    "finetune_optimizer = BootstrapFinetune(metric=None)\n",
-    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
+    "finetune_optimizer = BootstrapFinetune(metric=metric)\n",
+    "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
+    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, **config)\n",
     "\n",
     "# finetune_program = spreadsheeet_ananlyst\n",
     "\n",
     "# #Load program and activate model's parameters in program before evaluation\n",
     "# ckpt_path = \"saved_checkpoint_path_from_finetuning\"\n",
-    "# LM = dspy.HFModel(checkpoint=ckpt_path, model=llm)\n",
+    "# LM = dspy.HFModel(checkpoint=ckpt_path, model=model_name)\n",
     "\n",
     "# for p in finetune_program.predictors():\n",
     "#     p.lm = LM\n",
@@ -371,8 +394,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# perc_train = 0.7\n",
+    "# num_train = int(len(train_data) * perc_train)\n",
+    "# metric = dspy.evaluate.metrics.answer_exact_match\n",
+    "\n",
     "scores = []\n",
-    "for x in train_data[num_train:num_train+10]:\n",
+    "for x in train_data[num_train:num_train+34]:\n",
     "    pred = spreadsheeet_ananlyst(**x.inputs())\n",
     "    score = metric(x, pred)\n",
     "    scores.append(score)\n",
@@ -387,12 +414,14 @@
    "source": [
     "dfs_aug = randomize_row_values(dfs, ground_truth=ground_truth, n_samples=16)\n",
     "dfs_str = get_csv_string(dfs_aug)\n",
+    "dfs_str = get_csv_string(dfs)\n",
     "collection = []\n",
     "for value_to_extract in gt_collect:\n",
     "    print('Extracting value for:', value_to_extract)\n",
-    "    question = f\"Get the value for: {value_to_extract}.\"\n",
+    "    # question = f\"Get the value for: {value_to_extract}.\"\n",
+    "    question = f\"What is the value for the variable name: {value_to_extract}?\"\n",
     "\n",
-    "    pred = spreadsheeet_ananlyst(dfs_str, question, verbose=True)\n",
+    "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
     "    collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
    ]
   },
@@ -403,7 +432,7 @@
    "outputs": [],
    "source": [
     "for i in collection:\n",
-    "    print(i[0].answer, i[1])"
+    "    print(i[0].answer,\"---\", i[1])"
    ]
   },
   {
