--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -161,8 +161,8 @@
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
     "llm = dspy.HFModel(model=model_name, hf_device_map='auto', token=access_token)\n",
-    "llm.kwargs['max_new_tokens']=100\n",
-    "llm.kwargs['repetition_penalty']=1.1\n",
+    "llm.kwargs['max_new_tokens']=20\n",
+    "# llm.kwargs['repetition_penalty']=1.1\n",
     "llm.kwargs['temperature']=None\n",
     "llm.kwargs['do_sample']=False\n",
     "llm.kwargs['top_k']=None\n",
@@ -178,27 +178,27 @@
     "        bnb_4bit_compute_dtype=torch.float16,\n",
     ")\n",
     "\n",
-    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=quantization_config, \n",
+    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, \n",
     "                                               trust_remote_code=True, device_map=\"auto\", \n",
     "                                               attn_implementation=\"flash_attention_2\",  \n",
     "                                               torch_dtype=torch.bfloat16)\n",
     "\n",
     "\n",
-    "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+    "# from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
     "\n",
-    "config = LoraConfig(\n",
-    "    r=16,\n",
-    "    lora_alpha=32,\n",
-    "    target_modules=[\"k_proj\", \"v_proj\", \"q_proj\", \"o_proj\"], # Mistral param names\n",
-    "    lora_dropout=0.05,\n",
-    "    bias=\"none\", #\"none\", \"all\", \"lora_only\"\n",
-    "    task_type=\"CAUSAL_LM\", \n",
+    "# config = LoraConfig(\n",
+    "#     r=16,\n",
+    "#     lora_alpha=32,\n",
+    "#     target_modules=[\"k_proj\", \"v_proj\", \"q_proj\", \"o_proj\"], # Mistral param names\n",
+    "#     lora_dropout=0.05,\n",
+    "#     bias=\"none\", #\"none\", \"all\", \"lora_only\"\n",
+    "#     task_type=\"CAUSAL_LM\", \n",
     "    \n",
-    ")\n",
+    "# )\n",
     "\n",
-    "llm.model = prepare_model_for_kbit_training(llm.model)\n",
-    "llm.model = get_peft_model(llm.model, config)\n",
-    "print_trainable_parameters(llm.model)\n",
+    "# llm.model = prepare_model_for_kbit_training(llm.model)\n",
+    "# llm.model = get_peft_model(llm.model, config)\n",
+    "# print_trainable_parameters(llm.model)\n",
     "\n",
     "if model_name == 'mistralai/Mistral-7B-Instruct-v0.3':\n",
     "    llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
@@ -278,20 +278,11 @@
     "    print('Extracting value for:', value_to_extract)\n",
     "    question = f\"Get the value for: {value_to_extract}.\"\n",
     "\n",
-    "    parsed_name, parsed_values = spreadsheeet_ananlyst(dfs_str, question, verbose=True)\n",
-    "    collection.append((parsed_name, parsed_values))\n",
+    "    parsed_out = spreadsheeet_ananlyst(question, verbose=True)\n",
+    "    collection.append(parsed_out.answer)\n",
     "    # print(range_description_json[value_to_extract])\n",
     "    # print(parsed_name, parsed_values)\n",
     "    # print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection"
    ]
   },
   {
@@ -339,10 +330,10 @@
    "source": [
     "gt_collect = {}\n",
     "for row,col in ground_truth.iterrows():\n",
-    "    # if isinstance(col.values[0], int):\n",
-    "    #     name = f\"Cash Flows {col.values[0]}\"\n",
-    "    # else:\n",
-    "    name = col.values[0]\n",
+    "    if isinstance(col.values[0], int):\n",
+    "        name = f\"Cashflows {col.values[0]}\"\n",
+    "    else:\n",
+    "        name = col.values[0]\n",
     "    value = col.values[1]\n",
     "    gt_collect[name] = str(value)"
    ]
@@ -354,7 +345,7 @@
    "outputs": [],
    "source": [
     "# dfs_str = get_csv_string(dfs)\n",
-    "num_rounds = 10\n",
+    "num_rounds = 6\n",
     "train_data = []\n",
     "for _ in range(num_rounds):\n",
     "    # TODO: gradually increase n_samples, random fill in of values in range\n",
@@ -365,7 +356,7 @@
     "    for value_to_extract in gt_collect:\n",
     "\n",
     "        # question = f\"Get the value for: {value_to_extract}.\"\n",
-    "        question = f\"What is the value for the variable name: {value_to_extract}?\"\n",
+    "        question = f\"Extract the value for the variable name: {value_to_extract}?\"\n",
     "        answer = f\"{value_to_extract}: {gt_collect[value_to_extract]}\"\n",
     "        # train_data.append(dspy.Example(question=question, data=dfs_str, answer=answer).with_inputs('question', 'data'))\n",
     "        train_data.append(dspy.Example(question=question, answer=answer).with_inputs('question'))"
@@ -380,9 +371,9 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json\n",
+    "from train_utils import operators_dict, range_description_json\n",
     "from models import SpreadSheetAnalyzer\n",
-    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=1)"
+    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=2)"
    ]
   },
   {
@@ -397,12 +388,12 @@
     "metric = dspy.evaluate.metrics.answer_exact_match\n",
     "\n",
     "#Configure model to finetune\n",
-    "config = dict(target=model_name, epochs=2, bf16=True, bsize=1, accumsteps=3, lr=5e-5) #path_prefix=None\n",
+    "config = dict(target=model_name, epochs=10, bf16=True, bsize=1, accumsteps=3, lr=7e-5) #path_prefix=None\n",
     "\n",
     "#Compile program on BootstrapFinetune\n",
     "finetune_optimizer = BootstrapFinetune(metric=metric)\n",
-    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
-    "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, **config)\n",
+    "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
+    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, **config)\n",
     "\n",
     "# finetune_program = spreadsheeet_ananlyst\n",
     "\n",
@@ -439,15 +430,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs_aug = randomize_row_values(dfs, ground_truth=ground_truth, n_samples=16)\n",
-    "dfs_str = get_csv_string(dfs_aug)\n",
-    "dfs_str = get_csv_string(dfs)\n",
+    "# dfs_str = get_csv_string(dfs)\n",
     "collection = []\n",
     "for value_to_extract in gt_collect:\n",
-    "    print('Extracting value for:', value_to_extract)\n",
     "    # question = f\"Get the value for: {value_to_extract}.\"\n",
-    "    question = f\"What is the value for the variable name: {value_to_extract}?\"\n",
-    "\n",
+    "    question = f\"Extract the value for the variable name: {value_to_extract}.\"\n",
+    "    print(question)\n",
     "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
     "    collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
    ]
@@ -461,6 +449,22 @@
     "for i in collection:\n",
     "    print(i[0].answer,\"---\", i[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean([i[0].answer == i[1] for i in collection])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
