--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -154,14 +154,13 @@
     "access_token = os.getenv('HF_TOKEN')\n",
     "print('first model load...')\n",
     "# model_name = \"EleutherAI/gpt-neo-125m\"\n",
-    "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\"\n",
     "# model_name = \"microsoft/Phi-3-mini-128k-instruct\" # 128K context window\n",
     "# model_name = \"meta-llama/Meta-Llama-3-8B-Instruct\" # 8K context window\n",
     "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\" # 8K context window\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
     "llm = dspy.HFModel(model=model_name, hf_device_map='auto', token=access_token)\n",
-    "llm.kwargs['max_new_tokens']=20\n",
+    "llm.kwargs['max_new_tokens']=30\n",
     "# llm.kwargs['repetition_penalty']=1.1\n",
     "llm.kwargs['temperature']=None\n",
     "llm.kwargs['do_sample']=False\n",
@@ -172,6 +171,7 @@
     "llm.model=None\n",
     "gc.collect()\n",
     "print('reloading model...')\n",
+    "\n",
     "quantization_config = BitsAndBytesConfig(\n",
     "        load_in_4bit=True,\n",
     "        bnb_4bit_quant_type=\"nf4\",\n",
@@ -241,17 +241,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -262,10 +253,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "dfs_aug = randomize_row_values(dfs, ground_truth=ground_truth, n_samples=16)\n",
     "dfs_str = get_csv_string(dfs_aug)\n",
@@ -283,15 +272,6 @@
     "    # print(range_description_json[value_to_extract])\n",
     "    # print(parsed_name, parsed_values)\n",
     "    # print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raise"
    ]
   },
   {
@@ -356,7 +336,7 @@
     "    for value_to_extract in gt_collect:\n",
     "\n",
     "        # question = f\"Get the value for: {value_to_extract}.\"\n",
-    "        question = f\"Extract the value for the variable name: {value_to_extract}?\"\n",
+    "        question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
     "        answer = f\"{value_to_extract}: {gt_collect[value_to_extract]}\"\n",
     "        # train_data.append(dspy.Example(question=question, data=dfs_str, answer=answer).with_inputs('question', 'data'))\n",
     "        train_data.append(dspy.Example(question=question, answer=answer).with_inputs('question'))"
@@ -373,7 +353,7 @@
     "\n",
     "from train_utils import operators_dict, range_description_json\n",
     "from models import SpreadSheetAnalyzer\n",
-    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=2)"
+    "spreadsheeet_ananlyst = SpreadSheetAnalyzer(range_description_json, operators_dict, num_passages=1)"
    ]
   },
   {
@@ -412,13 +392,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dir(finetune_program)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load program and activate model's parameters in program before evaluation\n",
+    "ckpt_path = \"/workspace/repos/finetuning_ckpts/5YJOF3IJ3E8KP.all/checkpoint-96\"\n",
+    "LM = dspy.HFModel(checkpoint=ckpt_path, model=model_name)\n",
+    "\n",
+    "for p in finetune_program.predictors():\n",
+    "    p.lm = LM\n",
+    "    p.activated = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# perc_train = 0.7\n",
     "# num_train = int(len(train_data) * perc_train)\n",
     "# metric = dspy.evaluate.metrics.answer_exact_match\n",
     "\n",
     "scores = []\n",
     "for x in train_data[num_train:num_train+34]:\n",
-    "    pred = spreadsheeet_ananlyst(**x.inputs())\n",
+    "    pred = finetune_program(**x.inputs())\n",
     "    score = metric(x, pred)\n",
     "    scores.append(score)\n",
     "np.mean(scores)"
@@ -430,11 +434,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "saved_checkpoint_path_from_finetuning = '/workspace/repos/finetuning_ckpts/NFAI903XCHAMQ.all/checkpoint-53'\n",
+    "llm.model=None\n",
+    "llm.model=AutoModelForCausalLM.from_pretrained(saved_checkpoint_path_from_finetuning, quantization_config=None, \n",
+    "                                               trust_remote_code=True, device_map=\"auto\", \n",
+    "                                               attn_implementation=\"flash_attention_2\",  \n",
+    "                                               torch_dtype=torch.bfloat16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# dfs_str = get_csv_string(dfs)\n",
     "collection = []\n",
     "for value_to_extract in gt_collect:\n",
-    "    # question = f\"Get the value for: {value_to_extract}.\"\n",
-    "    question = f\"Extract the value for the variable name: {value_to_extract}.\"\n",
+    "    question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
     "    print(question)\n",
     "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
     "    collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
@@ -458,6 +475,46 @@
    "source": [
     "np.mean([i[0].answer == i[1] for i in collection])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baseline RAG and extractor only 0.35294117647058826\n",
+    "# baseline RAG, extractor, float and format checks 0.35294117647058826"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finetune_program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
