--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -373,7 +373,7 @@
     "#Compile program on BootstrapFinetune\n",
     "finetune_optimizer = BootstrapFinetune(metric=metric)\n",
     "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
-    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, **config)\n",
+    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:-17], valset=train_data[-17:], **config)\n",
     "\n",
     "# finetune_program = spreadsheeet_ananlyst\n",
     "\n",
